--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   max-width: 800px;
   min-height: 90vh;
   margin: 100px auto;
-  background-image: url('/rasmlar/ram2.png'); 
+  /* background-image: url('/rasmlar/ram2.png');  */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -53,4 +53,22 @@ body, html {
 .nm img{
     border-radius: 20px;
     width: 90%;
+}
+.manzil a{
+  text-decoration: none;
+  font-weight: bold;
+  background-color: white;
+  padding: 5px 10px;
+  padding-right: 20px;
+  border-radius:20px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  font-size: 20px;
+
+}
+
+.manzil a:hover{
+  background-color: black;
 }
